# dslab-docai

./: .gitignore  00-setup.ipynb  01-docling.ipynb  02-mistral-ocr.ipynb  03-chunk-text.ipynb  04-chunk-semantic.ipynb  04-chunk-text.ipynb  05-chunk-llmbased.ipynb  05-chunk-semantic.ipynb  06-chunk-llmbased.ipynb  10-pipeline-ex.ipynb  10-pipeline.ipynb  README.md  download_models.py  main.py  pyproject.toml  requirements.txt
data/pipeline/: Divulgacion-Planetaria-Althera.md
src/: mistral_pl.py  pipeline.py  prompts.py  utils.py
