[project]
name = "dslab-docai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docling==2.43.0",
    "docling-core[chunking-openai]>=2.47.0",
    "langchain-core>=0.3.75",
    "langchain-docling>=1.0.0",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.32",
    "langchain-text-splitters>=0.3.11",
    "matplotlib>=3.10.6",
    "mistralai>=1.9.10",
    "numpy>=2.2.6",
    "openai>=1.105.0",
    "pandas>=2.3.2",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
